Fix overlay z-index

--- a/src/styles/_overlays.scss
+++ b/src/styles/_overlays.scss
@@ -17,7 +17,7 @@
         visibility: visible;
         transform: none;
         opacity: 1;
-        z-index: 1;
+        z-index: 10;
     }
 
     > div {
